# helix-code

./: .gitignore  Cargo.toml  languages.toml
book/src/: configuration.md  languages.md
docs/acp/: README.md  extensibility.md  initialization.md  overview.md  prompt-turn.md  schema.md  session-setup.md
helix-acp/: Cargo.toml
helix-acp-types/: Cargo.toml
helix-acp-types/src/: lib.rs
helix-acp/src/: client.rs  handler.rs  jsonrpc.rs  lib.rs  registry.rs  rpc.rs  state.rs  transport.rs  types.rs
helix-core/src/: syntax.rs
helix-core/src/syntax/: config.rs
helix-dap-types/src/: lib.rs
helix-dap/src/: client.rs
helix-loader/: Cargo.toml
helix-loader/src/: launch.rs  lib.rs
helix-lsp/src/: client.rs  lib.rs
helix-mcp/: Cargo.toml
helix-mcp-types/: Cargo.toml
helix-mcp-types/src/: lib.rs
helix-mcp/src/: channel.rs  lib.rs  server.rs
helix-mcp/src/tools/: buffer.rs  dap.rs  editor.rs  fs.rs  lsp_extras.rs  mod.rs  read.rs  registers.rs  serde_lenient.rs  symbols.rs  vcs.rs  write.rs
helix-term/: Cargo.toml
helix-term/src/: application.rs  args.rs  commands.rs  compositor.rs  events.rs  handlers.rs  lib.rs  main.rs  session.rs
helix-term/src/commands/: dap.rs  lsp.rs  typed.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: agent.rs  button.rs  diff_base.rs  editor.rs  markdown.rs  menu.rs  mod.rs  multi_menu.rs  select.rs  statusline.rs  textarea.rs
helix-term/tests/: mcp_integration.rs
helix-term/tests/test/: helpers.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  events.rs  handlers.rs  icons.rs
helix-view/src/handlers/: acp.rs  dap.rs
