[package]
name = "helix-acp"
description = "ACP (Agent Client Protocol) client for Helix"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
futures-util.workspace = true
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros"] }
tokio-stream.workspace = true
