[package]
name = "helix-acp"
description = "ACP (Agent Client Protocol) client for Helix"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-acp-types = { path = "../helix-acp-types" }
agent-client-protocol = { version = "0.10", features = ["unstable_session_usage"] }
anyhow = "1.0"
async-trait = "0.1"
futures-util.workspace = true
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros", "fs"] }
tokio-stream.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
